k8s/notificationservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
  labels:
    app: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - name: notificationservice
          image: maxim58r/notificationservice:latest
          ports:
            - containerPort: 8080
