k8s/notificationservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
spec:
  selector:
    app: notificationservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
