k8s/notificationservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notificationservice-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: notificationservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notificationservice
                port:
                  number: 8080
